# noise-functions-demo

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  Trunk.toml  index.html  justfile  noise-functions-demo-3ba9864dee1c02de.js  noise-functions-demo-3ba9864dee1c02de_bg.wasm  noise-functions-demo-633ddd38c2157dd0.js  noise-functions-demo-633ddd38c2157dd0_bg.wasm  noise-functions-demo-737070a4f9e05b71.js  noise-functions-demo-737070a4f9e05b71_bg.wasm  sw.js
.cargo/: config.toml
.github/workflows/: pages.yml
assets/: manifest.json
generate-icons/: Cargo.toml
generate-icons/src/: main.rs
src/: app.rs  lib.rs  main.rs
