[package]
name = "noise-functions-demo"
version = "1.4.0"
edition = "2021"

[workspace]
members = ["generate-icons"]

[dependencies]
ahash = { version = "0.8.11", default-features = false }  # just fixing something
eframe = { version = "0.29.1", default-features = false, features = [
  "default_fonts",
  "glow",
] }
log = "0.4"
noise-functions-config = { version = "0.9.0", features = ["nightly-simd"] }
web-time = "1.1.0"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
env_logger = "0.11.3"

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen-futures = "0.4"

[profile.dev.package."*"]
opt-level = 2

[profile.release]
opt-level = 2
