[package]
name = "noise-functions-demo"
version = "1.5.0"
edition = "2024"
publish = false

[workspace]
members = ["generate-icons"]

[dependencies]
ahash = { version = "0.8.12", default-features = false }  # just fixing something
eframe = "0.34.1"
log = "0.4"
noise-functions-config = { version = "0.10.1", features = ["nightly-simd"] }
web-time = "1.1.0"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
env_logger = "0.11.10"

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen-futures = "0.4"

[profile.dev.package."*"]
opt-level = 2

[profile.release]
opt-level = 2
